Changed cost headers

--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -192,8 +192,8 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label> Consolidation Cost</label>
-                                        <input class="form-control" placeholder="Enter consol. cost..." id="group-cost" />
+                                        <label> Consolidation Cost (€)</label>
+                                        <input class="form-control" placeholder="Enter consol. cost in (€)..." id="group-cost" />
                                     </div>
                                 </div>
                                 <div class="form-group col-sm-6">
@@ -336,6 +336,9 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
+                                <div class="section-title">
+                                    <h4>Pending Consolidations</h4>
+                                </div>
                                 <div class="block bg-trans table-block mb-4">
                                     <div class="row">
                                         <div class="table-responsive">
