--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -201,7 +201,7 @@
 
             <div class="container-fluid">
                 <div class="col-12">
-                    <div class="section-title">
+                    <div class="section-title" style="margin-bottom: 2%">
                         <h4>Overview</h4>
                     </div>
                 </div>
@@ -239,14 +239,14 @@
                             <div class="block counter-block down mb-4 mb-lg-5">
                                 <div class="value" id="total_costs_per_period"></div>
 
-                                <p class="label">TOTAL ESTIMATE COST</p>
+                                <p class="label">TOTAL ESTIMATE COST (€)</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-6">
                             <div class="block counter-block down mb-4 mb-lg-5">
                                 <div class="value" id="total_savings_per_period"></div>
 
-                                <p class="label">TOTAL SHARED COST</p>
+                                <p class="label">TOTAL SHARED COST (€)</p>
                             </div>
                         </div>
                         <div class="col-sm-6 col-md-6 col-lg-6">
