--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -316,7 +316,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
-                                <div class="section-title">
+                                <div class="section-title" style="margin-bottom: 2%">
                                     <h4>Manage Application Data</h4>
                                 </div>
                             </div>
