--- a/pages/deleted_individuals.html
+++ b/pages/deleted_individuals.html
@@ -261,6 +261,9 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-12">
+                                <div class="section-title">
+                                    <h4>Deleted Individuals</h4>
+                                </div>
                                 <div class="block bg-trans table-block mb-4">
                                     <div class="row">
                                         <div class="table-responsive">
