--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -187,7 +187,7 @@
                         <div class="col-sm-12">
                             <div class="form-group">
                                 <label> Consolidation Cost (€)</label>
-                                <input class="form-control" placeholder="Consolidation group cost €" id="consolidation_group_cost" disabled />
+                                <input class="form-control" placeholder="Type Consolidation Cost in (€)..." id="consolidation_group_cost" disabled />
                             </div>
                         </div>
                         <div id="group-cost-div">
@@ -328,6 +328,9 @@
 
                         <div class="row">
                             <div class="col-12">
+                                <div class="section-title">
+                                    <h4>Done Consolidations</h4>
+                                </div>
                                 <div class="block bg-trans table-block mb-4">
                                     <div class="row">
                                         <div class="table-responsive">
