--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -220,13 +220,13 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Estimate cost (€)</label>
-                                        <input type="number" class="form-control" placeholder="Type estimate cost (€)..." id="estimate_cost" />
+                                        <input type="number" class="form-control" placeholder="Type estimate cost in (€)..." id="estimate_cost" />
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> WEIGHT (KG)</label>
-                                        <input type="number" class="form-control" placeholder="Type Kilos..." id="kg" />
+                                        <input type="number" class="form-control" placeholder="Type weight in (kg)..." id="kg" />
                                     </div>
                                 </div>
                             </div>
@@ -301,8 +301,8 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label> Estimate Cost €</label>
-                                    <input class="form-control" placeholder="Job estimate cost" id="job_estimate_costs" disabled />
+                                    <label> Estimate Cost (€)</label>
+                                    <input class="form-control" placeholder="Job estimate cost (€)" id="job_estimate_costs" disabled />
                                 </div>
                             </div>
                         </div>
@@ -323,8 +323,8 @@
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
-                                        <label> Group Cost</label>
-                                        <input class="form-control" placeholder="Type group cost..." id="group_cost" />
+                                        <label> Group Cost (€)</label>
+                                        <input class="form-control" placeholder="Type Group Cost in (€)..." id="group_cost" />
                                     </div>
                                 </div>
                             </div>
@@ -421,14 +421,14 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label> Estimate Cost </label>
-                                    <input class="form-control" placeholder="Estimate cost" id="personnel-estimate-cost" disabled />
+                                    <label> Estimate Cost (€) </label>
+                                    <input class="form-control" placeholder="Type estimate cost in (€)" id="personnel-estimate-cost" disabled />
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <label> Actual Cost</label>
-                                    <input type="number" class="form-control" placeholder="Type actual cost..." id="personnel-actual-cost" />
+                                    <label> Actual Cost (€)</label>
+                                    <input type="number" class="form-control" placeholder="Type actual cost in (€)..." id="personnel-actual-cost" />
                                 </div>
                             </div>
                         </div>
@@ -439,7 +439,7 @@
                                     <input
                                         type="number"
                                         class="form-control"
-                                        placeholder="Savings will be calculated once you fill actual cost..."
+                                        placeholder="Savings calculated from actual cost..."
                                         id="personnel-savings"
                                         disabled
                                     />
@@ -451,7 +451,7 @@
                                     <input
                                         type="number"
                                         class="form-control"
-                                        placeholder="Savings % will be calculated once you fill actual cost..."
+                                        placeholder="Savings calculated from actual cost..."
                                         id="personnel-savings-percent"
                                         disabled
                                     />
@@ -581,7 +581,11 @@
                 <div class="content sm-gutter">
                     <div class="container-fluid">
                         <div class="row">
+                            <div class="col-12"></div>
                             <div class="col-12">
+                                <div class="section-title">
+                                    <h4>Pending Individuals</h4>
+                                </div>
                                 <div class="block bg-trans table-block mb-4">
                                     <div class="row">
                                         <div class="table-responsive">
