--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -115,7 +115,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
-                        <h5 class="modal-title">Cities</h5>
+                        <h5 class="modal-title">CREATE NEW CITY</h5>
                         <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
                     </div>
                     <div class="modal-body">
@@ -123,8 +123,12 @@
                             <input class="form-control" id="city_id" />
                         </div>
                         <div class="form-group col-sm-12">
-                            <label>City Name</label>
-                            <input class="form-control" placeholder="City Name" id="city_name" />
+                            <label>ADD YOUR CITY*</label>
+                            <input class="form-control" placeholder="Type city name..." id="city_name" />
+                        </div>
+                        <div class="form-group col-sm-12">
+                            <label>ADD YOUR ASSOCIATE/SUPPLIER/PORT</label>
+                            <input class="form-control" placeholder="Associate/Supplier/Port" id="city_associate" />
                         </div>
                     </div>
                     <div class="modal-footer">
