--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -223,10 +223,16 @@
                                         <input type="number" class="form-control" placeholder="Type estimate cost in (€)..." id="estimate_cost" />
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-2">
                                     <div class="form-group">
                                         <label> WEIGHT (KG)</label>
-                                        <input type="number" class="form-control" placeholder="Type weight in (kg)..." id="kg" />
+                                        <input type="number" class="form-control" placeholder="Weight (kg)..." id="kg" />
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-group">
+                                        <label> PIECES</label>
+                                        <input type="number" class="form-control" placeholder="Pieces..." id="pieces" />
                                     </div>
                                 </div>
                             </div>
