Fixed ordering, Vessel on assignment and rates

--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -217,10 +217,16 @@
                                         ></select>
                                     </div>
                                 </div>
-                                <div class="col-sm-4">
+                                <div class="col-sm-2">
                                     <div class="form-group">
-                                        <label> Estimate cost (€)</label>
-                                        <input type="number" class="form-control" placeholder="Type estimate cost in (€)..." id="estimate_cost" />
+                                        <label> Est. cost</label>
+                                        <input type="number" class="form-control" placeholder="Est Cost" id="estimate_cost" />
+                                    </div>
+                                </div>
+                                <div class="col-sm-2 col-2 col-md-2">
+                                    <div class="form-group">
+                                        <label> Currency</label>
+                                        <select class="form-control select" id="currency" data-placeholder="Currency" tabindex="1"></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-2">
@@ -327,10 +333,16 @@
                                         />
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
+                                <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label> Group Cost (€)</label>
-                                        <input class="form-control" placeholder="Type Group Cost in (€)..." id="group_cost" />
+                                        <label> Group Cost</label>
+                                        <input class="form-control" placeholder="Group Cost..." id="group_cost" />
+                                    </div>
+                                </div>
+                                <div class="col-sm-3">
+                                    <div class="form-group">
+                                        <label> Currency</label>
+                                        <select class="form-control select" id="group-currency" data-placeholder="Currency" tabindex="1"></select>
                                     </div>
                                 </div>
                             </div>
