Almost done with reference search

--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -64,16 +64,7 @@
     </head>
     <body class="top-navigation">
         <!-- Start Help modal -->
-        <div
-            aria-hidden="true"
-            class="modal fade"
-            role="dialog"
-            tabindex="-1"
-            style="top: 15%"
-            id="help-modal"
-            data-keyboard="false"
-            data-backdrop="static"
-        >
+        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
             <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -119,16 +110,7 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Group Data Modal-->
-        <div
-            aria-hidden="true"
-            class="modal fade"
-            role="dialog"
-            tabindex="-1"
-            style="top: 15%"
-            id="group-modal"
-            data-keyboard="false"
-            data-backdrop="static"
-        >
+        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="group-modal" data-keyboard="false" data-backdrop="static">
             <div id="cost-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -154,12 +136,7 @@
                             <div class="col-sm-6">
                                 <div class="form-group">
                                     <label> Service</label>
-                                    <select
-                                        class="form-control select"
-                                        id="service-type-select"
-                                        data-placeholder="Choose service..."
-                                        tabindex="1"
-                                    ></select>
+                                    <select class="form-control select" id="service-type-select" data-placeholder="Choose service..." tabindex="1"></select>
                                 </div>
                             </div>
                         </div>
@@ -168,23 +145,13 @@
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> Ex</label>
-                                        <select
-                                            class="form-control select"
-                                            id="group-ex-select"
-                                            data-placeholder="Choose city..."
-                                            tabindex="1"
-                                        ></select>
+                                        <select class="form-control select" id="group-ex-select" data-placeholder="Choose city..." tabindex="1"></select>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <label> To</label>
-                                        <select
-                                            class="form-control select"
-                                            id="group-to-select"
-                                            data-placeholder="Choose city..."
-                                            tabindex="1"
-                                        ></select>
+                                        <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
                                     </div>
                                 </div>
                             </div>
@@ -201,12 +168,7 @@
                                     <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
                                     <div class="input-group">
                                         <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
-                                        <input
-                                            class="single-date-picker form-control"
-                                            type="text"
-                                            placeholder="Select consol. deadline"
-                                            id="group-deadline"
-                                        />
+                                        <input class="single-date-picker form-control" type="text" placeholder="Select consol. deadline" id="group-deadline" />
                                     </div>
                                 </div>
                             </div>
