--- a/pages/deleted_individuals.html
+++ b/pages/deleted_individuals.html
@@ -63,16 +63,7 @@
     </head>
     <body class="top-navigation">
         <!-- Start Help modal -->
-        <div
-            aria-hidden="true"
-            class="modal fade"
-            role="dialog"
-            tabindex="-1"
-            style="top: 15%"
-            id="help-modal"
-            data-keyboard="false"
-            data-backdrop="static"
-        >
+        <div aria-hidden="true" class="modal fade" role="dialog" tabindex="-1" style="top: 15%" id="help-modal" data-keyboard="false" data-backdrop="static">
             <div id="help-modal-header" class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -118,16 +109,7 @@
         </div>
         <!-- End Help modal -->
         <!-- Start Notes modal -->
-        <div
-            aria-hidden="true"
-            class="modal fade bd-example-modal-sm"
-            role="dialog"
-            tabindex="-1"
-            style="top: 15%"
-            id="notes-modal"
-            data-keyboard="false"
-            data-backdrop="static"
-        >
+        <div aria-hidden="true" class="modal fade bd-example-modal-sm" role="dialog" tabindex="-1" style="top: 15%" id="notes-modal" data-keyboard="false" data-backdrop="static">
             <div id="edit-notes-modal-header" class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -248,7 +230,7 @@
                             <button id="empty-trashcan" class="btn btn-success mt-2">EMPTY TRASHCAN</button>
                         </li>
                         <input placeholder="Search Table..." id="search_datatable" style="float: right; height: 35px; margin: 5px" />
-                        <!-- <button class="btn btn-info mt-2" id="help-btn" style="float: right; height: 35px; margin: 5px">Help</button> -->
+                        <button class="btn btn-info mt-2" id="help-btn" style="float: right; height: 35px; margin: 5px">Help</button>
                     </ul>
                 </div>
             </nav>
