--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -172,7 +172,7 @@
             data-keyboard="false"
             data-backdrop="static"
         >
-            <div id="cost-modal-header" class="modal-dialog">
+            <div id="cost-modal-header" class="modal-dialog modal-lg">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
@@ -181,7 +181,7 @@
                     </div>
                     <div class="modal-body">
                         <div class="row">
-                            <div class="col-sm-6">
+                            <div class="col-4">
                                 <div class="form-group">
                                     <label> Mode</label>
                                     <select class="form-control select" id="group-mode-select" data-placeholder="Choose mode..." tabindex="1">
@@ -194,7 +194,7 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-4">
                                 <div class="form-group">
                                     <label> Service</label>
                                     <select
@@ -205,59 +205,119 @@
                                     ></select>
                                 </div>
                             </div>
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label> Forwarder</label>
+                                    <input class="form-control" placeholder="Enter consol. forwarder" id="group-forwarder" />
+                                </div>
+                            </div>
                         </div>
-                        <div id="group-cost-div">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label> Ex</label>
-                                        <select
-                                            class="form-control select"
-                                            id="group-ex-select"
-                                            data-placeholder="Choose city..."
-                                            tabindex="1"
-                                        ></select>
-                                    </div>
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label> Ex</label>
+                                    <select class="form-control select" id="group-ex-select" data-placeholder="Choose city..." tabindex="1"></select>
                                 </div>
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label> To</label>
-                                        <select
-                                            class="form-control select"
-                                            id="group-to-select"
-                                            data-placeholder="Choose city..."
-                                            tabindex="1"
-                                        ></select>
+                            </div>
+                            <div class="col-4">
+                                <div class="form-group">
+                                    <label> To</label>
+                                    <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
+                                </div>
+                            </div>
+                            <div class="form-group col-4">
+                                <label>Deadline</label>
+                                <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
+                                <div class="input-group">
+                                    <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
+                                    <input
+                                        class="single-date-picker form-control"
+                                        type="text"
+                                        placeholder="Select consol. deadline"
+                                        id="group-deadline"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <label> Currency</label>
+                                    <select class="form-control select" id="currency" data-placeholder="Currency" tabindex="1"></select>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <label> Rate</label>
+                                    <input class="form-control" placeholder="Select currency to get rate..." id="currency_rate" disabled />
+                                </div>
+                            </div>
+                        </div>
+                        <hr />
+                        <div class="row" id="grouped-jobs-cost">
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-12" style="text-align: center">
+                                        <h8>GROUP ACTUAL COSTS</h8>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label> Group Consolidation Cost</label>
+                                            <input
+                                                class="form-control currency-input"
+                                                id="group-cost"
+                                                placeholder="Type Cost in EUR..."
+                                                type="number"
+                                            />
+                                        </div>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label> Total Savings Due to Grouping</label>
+                                            <input
+                                                class="form-control"
+                                                id="group-savings"
+                                                placeholder="Group savings in EUR..."
+                                                type="number"
+                                                disabled
+                                            />
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label> Consolidation Cost (€)</label>
-                                        <input class="form-control" placeholder="Enter consol. cost in (€)..." id="group-cost" />
+                            <div class="col-6">
+                                <div class="row">
+                                    <div class="col-12" style="text-align: center">
+                                        <h8>GROUP ESTIMATE COSTS</h8>
                                     </div>
-                                </div>
-                                <div class="form-group col-sm-6">
-                                    <label>Deadline</label>
-                                    <a class="deadline-info" href="#"><i class="fa fa-info"></i></a>
-                                    <div class="input-group">
-                                        <span class="input-group-addon text-dark"><i class="ion-ios-calendar-outline"></i></span>
-                                        <input
-                                            class="single-date-picker form-control"
-                                            type="text"
-                                            placeholder="Select consol. deadline"
-                                            id="group-deadline"
-                                        />
-                                    </div>
+                                    <div class="col-12" id="append-grouped-estimate-cost" style="padding-left: 0px; padding-right: 0px"></div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="form-group">
-                                        <label> Forwarder</label>
-                                        <input class="form-control" placeholder="Enter consol. forwarder" id="group-forwarder" />
+                        </div>
+                        <div class="row">
+                            <div class="col-6" id="individual-jobs-cost">
+                                <div class="row">
+                                    <div class="col-12" style="text-align: center">
+                                        <h8>INDIVIDUAL (IMPORT) COST</h8>
+                                    </div>
+                                    <div class="col-12" id="append-individual-cost" style="padding-left: 0px; padding-right: 0px"></div>
+                                </div>
+                            </div>
+                            <div class="col-6" id="local-jobs-costs">
+                                <div class="row">
+                                    <div class="col-12" style="text-align: center">
+                                        <h8>LOCAL COST</h8>
+                                    </div>
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <label> Local Jobs Costs</label>
+                                            <input
+                                                class="form-control currency-input"
+                                                id="locals-cost"
+                                                placeholder="Type Cost in EUR..."
+                                                type="number"
+                                            />
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -265,6 +325,7 @@
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
+                        <button class="btn btn-success" type="button" id="calculate-group-savings">CALCULATE SAVINGS</button>
                         <button class="btn btn-primary" type="button" id="save-group-data">Save changes</button>
                     </div>
                 </div>
