--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="../assets/icons/weathericons/css/weather-icons.min.css">
 
     <link rel="stylesheet" href="../assets/css/toastr.min.css">
+
+    <!--Datatables Css-->
+    <link rel="stylesheet" href="../assets/css/cellBorderTables.css">
     <!--Date-range-->
     <link rel="stylesheet" href="../assets/plugins/date-range/daterangepicker.css">
     <!--Drop-Zone-->
@@ -40,6 +43,17 @@
     <link rel="stylesheet" href="../assets/css/normalize.css">
     <!--Main Css-->
     <link rel="stylesheet" href="../assets/css/main.css">
+
+    <style>
+        @media print {
+            @page {
+            }
+            html, body {
+                width: 100%;
+                height: 100%;        
+            }
+        }
+    </style>
 
 </head>
 <body class="top-navigation">
@@ -231,6 +245,9 @@
                         <span class="title" style="color: white">Overview</span>
                     </a>
                 </li>
+                <li id="actions_list">
+                    <button class="btn btn-danger mt-2" onclick="window.location.reload()">REFRESH</button>
+                </li>
             </ul>
         </div>
     </nav>
@@ -249,27 +266,31 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="form-group col-sm-4">
+                    <div class="form-group col-3">
                         <label>from date:</label>
                         <div class="input-group">
                                 <span class="input-group-addon text-dark"><i
                                         class="ion-ios-calendar-outline"></i></span>
-                            <input class="single-date-picker form-control" type="text" placeholder="Select Date"
+                            <input class="down-date-picker form-control" type="text" placeholder="Select Date"
                                    id="from_date">
                         </div>
                     </div>
-                    <div class="form-group col-sm-4">
+                    <div class="form-group col-3">
                         <label>to date:</label>
                         <div class="input-group">
                                 <span class="input-group-addon text-dark"><i
                                         class="ion-ios-calendar-outline"></i></span>
-                            <input class="single-date-picker form-control" type="text" placeholder="Select Date"
+                            <input class="down-date-picker form-control" type="text" placeholder="Select Date"
                                    id="to_date">
                         </div>
                     </div>
-                    <div class="col-4">
-                        <button class="btn btn-warning" id="update-data" style="width: 100%;margin-top: 5%">Update
+                    <div class="col-3">
+                        <button class="btn btn-primary" id="update-data" style="width: 100%;margin-top: 5%">Update
                             Data
+                        </button>
+                    </div>
+                    <div class="col-3">
+                        <button class="btn btn-success" id="print-data" style="width: 100%;margin-top: 5%">Print Overview
                         </button>
                     </div>
 
@@ -316,11 +337,61 @@
 
 
             </div>
-
-            <div class="col-12">
-                <div class="table-responsive">
-                    <table id="manager_data_table" class="display table table-striped" style="width: 100%">
-                        <tfoot></tfoot>
+            <div class="row" ID="table-div" style="display: none">
+                <div class="col-3">
+                    <div class="block counter-block mb-4 mb-lg-5">
+                        <div class="value" id="total-cost-without-grouping"></div>
+                        <p class="label">TOTAL COST WITHOUT GROUPING</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="block counter-block mb-4 mb-lg-5">
+                        <div class="value" id="total-cost-with-grouping"></div>
+                        <p class="label">TOTAL COST WITH GROUPING</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="block counter-block mb-4 mb-lg-5">
+                        <div class="value" id="total-savings"></div>
+                        <p class="label">TOTAL SAVING (€)</p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="block counter-block mb-4 mb-lg-5">
+                        <div class="value" id="total-savings-percent"></div>
+                        <p class="label">TOTAL SAVING %</p>
+                    </div>
+                </div>
+                <div class="col-12 table-responsive">
+                    <table id="overview-table" class="table table-striped table-bordered" style="width: 100%">
+                        <thead>
+                            <tr>
+                                <th rowspan="2" class="parent-header">DEPARTMENT</th>
+                                <th colspan="1" class="parent-header" style="background-color: #F08080">INDIVIDUAL</th>
+                                <th colspan="4" class="parent-header" style="background-color: #90EE90">GROUP</th>
+                                <th colspan="4" class="parent-header" style="background-color: #ADD8E6">PERSONNEL</th>
+                                <th colspan="4" class="parent-header" style="background-color: #F0E68C">CONSOLIDATED</th>
+                                <th colspan="3" class="parent-header">TOTALS</th>
+                            </tr>
+                            <tr>
+                                <th class="parent-header">INDIVIDUAL COST</th>
+                                <th class="parent-header">ESTIMATE COST</th>
+                                <th class="parent-header">SHARED COST</th>
+                                <th class="parent-header">SAVINGS (€)</th>
+                                <th class="parent-header">SAVINGS (%)</th>
+                                <th class="parent-header">ESTIMATE COST</th>
+                                <th class="parent-header">SHARED COST</th>
+                                <th class="parent-header">SAVINGS (€)</th>
+                                <th class="parent-header">SAVINGS (%)</th>
+                                <th class="parent-header">ESTIMATE COST</th>
+                                <th class="parent-header">SHARED COST</th>
+                                <th class="parent-header">SAVINGS (€)</th>
+                                <th class="parent-header">SAVINGS (%)</th>
+                                <th class="parent-header">TOTAL BEFORE GROUPING</th>
+                                <th class="parent-header">TOTAL AFTER GROUPING</th>
+                                <th class="parent-header">TOTAL SAVING</th>
+                            </tr>
+                        </thead>
                     </table>
 
                 </div>
@@ -333,9 +404,9 @@
     <footer>
 
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+        <!-- <div class="footer-copyright text-center py-3">© 2020 Copyright:
             <a href="#"> PARIS ANANIA.</a> All rights reserved.
-        </div>
+        </div> -->
         <!-- Copyright -->
 
     </footer>
