--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -61,7 +61,7 @@
         </style>
     </head>
     <body class="top-navigation">
-        <!-- Start Global Search modal -->
+        <!-- Start Ref. Tracker modal -->
         <div
             aria-hidden="true"
             class="modal fade"
@@ -76,7 +76,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
-                        <h5 class="modal-title">Global Search</h5>
+                        <h5 class="modal-title">Ref. Tracker</h5>
 
                         <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
                     </div>
@@ -574,9 +574,9 @@
                             <button class="btn btn-danger mt-2" onclick="window.location.reload()">REFRESH</button>
                         </li>
 
-                        <input placeholder="Search Table..." id="search_datatable" style="float: right; height: 35px; margin: 5px" />
+                        <input placeholder="Search" id="search_datatable" style="float: right; height: 35px; margin: 5px" />
                         <button class="btn btn-info mt-2" id="global-search-modal-btn" style="float: right; height: 35px; margin: 5px">
-                            GLOBAL SEARCH
+                            Ref. Tracker
                         </button>
                     </ul>
                 </div>
