--- a/pages/statistics.html
+++ b/pages/statistics.html
@@ -57,7 +57,7 @@
 
 </head>
 <body class="top-navigation">
-            <!-- Start Global Search modal -->
+            <!-- Start Ref. Tracker modal -->
             <div
             aria-hidden="true"
             class="modal fade"
@@ -72,7 +72,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
-                        <h5 class="modal-title">Global Search</h5>
+                        <h5 class="modal-title">Ref. Tracker</h5>
 
                         <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
                     </div>
