Added example on add city modal

--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -173,6 +173,10 @@
                             <label>ADD YOUR ASSOCIATE/SUPPLIER/PORT</label>
                             <input class="form-control" placeholder="Associate/Supplier/Port" id="city_associate" />
                         </div>
+                        <div class="form-group col-sm-12">
+                            <p>eg: Shanghai (OMS)</p>
+                            <p>&nbsp; &nbsp; &nbsp; Shanghai (Port)</p>
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <button class="btn btn-secondary" data-dismiss="modal" type="button">Close</button>
